# scriptura

./: .gitignore  CMakeLists.txt  README.md  build.sh  codeeditor.cpp  codeeditor.h  configvalidator.cpp  crashhandler.cpp  deploy-linux.sh  deploy-macos.sh  deploy-windows.bat  gitpanel.cpp  gitpanel.h  lspclient.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  scriptura  scriptura.pro  splashscreen.h  terminalpanel.cpp  terminalpanel.h  todopanel.cpp  todopanel.h  updater.cpp  updater.h
.github/workflows/: build.yml  release.yml
snap/: scriptura.desktop  snapcraft.yaml
tests/: CMakeLists.txt  test_configvalidator.cpp
